--- a/main.html
+++ b/main.html
@@ -7,7 +7,17 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<ol data-ns-test="shopping list">
+    <li>Iphone</li>
+    <li>MacBook</li>
+    <li>Bike</li>
+</ol>
+
+     <ul data-ns-test="holiday list">
+     <li>Manali</li>
+    <li>Ladakh</li>
+     <li>Venice</li>
+</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
