--- a/main.html
+++ b/main.html
@@ -7,16 +7,16 @@
 </head>
 
 <body>
-	<ol data-ns-test="shopping list">
-    <li>Iphone</li>
-    <li>MacBook</li>
-    <li>Bike</li>
+	<ol>
+    <li data-ns-test="shopping list">Iphone</li>
+    <li data-ns-test="shopping list">MacBook</li>
+    <li data-ns-test="shopping list">Bike</li>
 </ol>
 
-     <ul data-ns-test="holiday list">
-     <li>Manali</li>
-    <li>Ladakh</li>
-     <li>Venice</li>
+     <ul>
+     <li data-ns-test="holiday list">Manali</li>
+    <li data-ns-test="holiday list">Ladakh</li>
+     <li data-ns-test="holiday list">Venice</li>
 </ul>
     <script type="text/javascript" src="./script.js">
 </script>
