--- a/main.html
+++ b/main.html
@@ -8,15 +8,15 @@
 
 <body>
 <ol>
-    <li data-ns-test="shopping list">Iphone</li>
-    <li data-ns-test="shopping list">MacBook</li>
-    <li data-ns-test="shopping list">Bike</li>
+    <li data-ns-test="shoppingList">Iphone</li>
+    <li data-ns-test="shoppingList">MacBook</li>
+    <li data-ns-test="shoppingList">Bike</li>
 </ol>
 
 <ul>
-     <li data-ns-test="holiday list">Manali</li>
-     <li data-ns-test="holiday list">Ladakh</li>
-     <li data-ns-test="holiday list">Venice</li>
+     <li data-ns-test="holidayList">Manali</li>
+     <li data-ns-test="holidayList">Ladakh</li>
+     <li data-ns-test="holidayList">Venice</li>
 </ul>
     <script type="text/javascript" src="./script.js">
 </script>
